--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+ .grid-container {
+     display: grid;
+     grid-template-columns: auto auto auto;
+     column-gap: 10px;
+
+ }
